# The-Protocol

./: .gitignore  main.py  pyproject.toml
.lavish/: data-schema.html  dev_intro.html  foundation-architecture.html  foundation-technical.html  game-design.html  intro.html.bak  mvp-data.html  plan_v1.html  schema-options.html
app/: game.py
app/screens/: cycle_screen.py  end_screen.py  log_screen.py
data/anomalies/book/: art.txt  book.toml
data/anomalies/hunger/: art.txt  hunger.toml
data/anomalies/the_dreamer/: art.txt  the_dreamer.toml
data/comms/: morrow_voice.toml
data/experiments/proximate_analysis/: proximate_analysis.toml
data/management/: max_suppress.toml  soft_watch.toml  standard_cage.toml
data/principals/morrow/: absent.txt  corrupted.txt  damaged.txt  intact.txt  morrow.toml
engine/: game_state.py  loader.py  narrative.py  resolution.py
plans/: 01-architecture.md  02-technical.md  03-schema.md
tests/: test_content_registry.py  test_game_loop.py
