[project]
name = "the-protocol"
version = "0.1.0"
description = "Foundation containment management. Round-based TUI strategy game."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[project.scripts]
the-protocol = "main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
